--- a/cosmos/intentio/index.html
+++ b/cosmos/intentio/index.html
@@ -2,13 +2,107 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Connect to Keplr - Intentio Testnet</title>
+  <title>Intentio Keplr Connect</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      background: linear-gradient(135deg, #1e293b, #0f172a);
+      color: #f1f5f9;
+      padding: 1rem;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+
+    button, a.faucet-btn {
+      display: inline-block;
+      padding: 1rem 2rem;
+      margin: 0.5rem 0;
+      font-size: 1rem;
+      border: none;
+      border-radius: 0.5rem;
+      background-color: #3b82f6;
+      color: white;
+      cursor: pointer;
+      transition: background 0.3s;
+      width: 90%;
+      max-width: 400px;
+      text-align: center;
+      text-decoration: none;
+    }
+
+    button:hover, a.faucet-btn:hover {
+      background-color: #2563eb;
+    }
+
+    #wallet-address {
+      margin-top: 2rem;
+      font-size: 1rem;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      word-break: break-all;
+      background: #1e293b;
+      padding: 1rem;
+      border-radius: 0.5rem;
+      border: 1px solid #334155;
+      width: 90%;
+      max-width: 500px;
+      justify-content: space-between;
+    }
+
+    .copy-icon {
+      cursor: pointer;
+      font-size: 1.2rem;
+      color: #94a3b8;
+    }
+
+    .copy-icon:hover {
+      color: #f8fafc;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      button, a.faucet-btn {
+        font-size: 0.9rem;
+        padding: 0.75rem 1.5rem;
+      }
+
+      #wallet-address {
+        font-size: 0.9rem;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h2>🔗 Connect to Keplr - Intentio Testnet</h2>
-  <button onclick="connectKeplr()">🔐 Connect Wallet</button>
-  <button onclick="addIntentioChain()">➕ Add Intentio Chain</button>
-  <p id="wallet-address">Wallet Address: -</p>
+  <h1>🔗 Connect to Keplr - Intentio Testnet</h1>
+
+  <button onclick="addIntentioChain()">➕ Add Chain to Keplr</button>
+  <button onclick="connectKeplr()">🔍 Check Address</button>
+
+  <!-- Faucet Testnet Button -->
+  <a href="https://faucet.intentio.network" 
+     class="faucet-btn" 
+     target="_blank" 
+     rel="noopener noreferrer">🚰 Faucet Testnet</a>
+
+  <div id="wallet-address" style="display: none;">
+    <span id="address-text">Wallet Address</span>
+    <span class="copy-icon" onclick="copyAddress()">📋</span>
+  </div>
 
   <script>
     const chainId = "intentio-ics-test-1";
@@ -59,7 +153,7 @@
 
       try {
         await window.keplr.experimentalSuggestChain(chainInfo);
-        alert("✅ Chain Intentio berhasil ditambahkan ke Keplr!");
+        alert("✅ Chain Intentio berhasil ditambahkan!");
       } catch (err) {
         console.error(err);
         alert("❌ Gagal menambahkan chain.");
@@ -76,12 +170,23 @@
         await window.keplr.enable(chainId);
         const offlineSigner = window.getOfflineSigner(chainId);
         const accounts = await offlineSigner.getAccounts();
-        document.getElementById("wallet-address").innerText =
-          "Wallet Address: " + accounts[0].address;
+        const address = accounts[0].address;
+
+        document.getElementById("address-text").textContent = address;
+        document.getElementById("wallet-address").style.display = "flex";
       } catch (err) {
         console.error(err);
         alert("Gagal koneksi ke Keplr.");
       }
+    }
+
+    function copyAddress() {
+      const address = document.getElementById("address-text").textContent;
+      navigator.clipboard.writeText(address).then(() => {
+        alert("✅ Alamat berhasil disalin!");
+      }).catch(err => {
+        console.error("Gagal salin alamat:", err);
+      });
     }
   </script>
 </body>
