--- a/cosmos/intentio/index.html
+++ b/cosmos/intentio/index.html
@@ -4,24 +4,27 @@
   <meta charset="UTF-8" />
   <title>Intentio Keplr Connect</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Inter', sans-serif;
+      background: #0f0f0f;
+      color: #f5f5f5;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      background: linear-gradient(135deg, #1e293b, #0f172a);
-      color: #f1f5f9;
       padding: 1rem;
     }
 
     h1 {
-      font-size: 2rem;
+      font-size: 2.2rem;
+      font-weight: 600;
       margin-bottom: 2rem;
       text-align: center;
+      color: #ffffff;
     }
 
     button, a.faucet-btn {
@@ -29,20 +32,22 @@
       padding: 1rem 2rem;
       margin: 0.5rem 0;
       font-size: 1rem;
-      border: none;
-      border-radius: 0.5rem;
-      background-color: #3b82f6;
-      color: white;
+      font-weight: 500;
+      border: 1px solid #444;
+      border-radius: 0.6rem;
+      background-color: #1a1a1a;
+      color: #f5f5f5;
       cursor: pointer;
-      transition: background 0.3s;
+      transition: all 0.3s ease;
       width: 90%;
-      max-width: 400px;
+      max-width: 420px;
       text-align: center;
       text-decoration: none;
     }
 
     button:hover, a.faucet-btn:hover {
-      background-color: #2563eb;
+      background-color: #2a2a2a;
+      border-color: #666;
     }
 
     #wallet-address {
@@ -50,25 +55,26 @@
       font-size: 1rem;
       display: flex;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.75rem;
       word-break: break-all;
-      background: #1e293b;
+      background: #1a1a1a;
       padding: 1rem;
-      border-radius: 0.5rem;
-      border: 1px solid #334155;
+      border-radius: 0.6rem;
+      border: 1px solid #444;
       width: 90%;
-      max-width: 500px;
+      max-width: 520px;
       justify-content: space-between;
     }
 
     .copy-icon {
       cursor: pointer;
       font-size: 1.2rem;
-      color: #94a3b8;
+      color: #aaa;
+      transition: color 0.2s ease;
     }
 
     .copy-icon:hover {
-      color: #f8fafc;
+      color: #fff;
     }
 
     @media (max-width: 600px) {
@@ -77,8 +83,8 @@
       }
 
       button, a.faucet-btn {
-        font-size: 0.9rem;
-        padding: 0.75rem 1.5rem;
+        font-size: 0.95rem;
+        padding: 0.75rem 1.2rem;
       }
 
       #wallet-address {
@@ -93,7 +99,6 @@
   <button onclick="addIntentioChain()">➕ Add Chain to Keplr</button>
   <button onclick="connectKeplr()">🔍 Check Address</button>
 
-  <!-- Faucet Testnet Button -->
   <a href="https://faucet.intentio.network" 
      class="faucet-btn" 
      target="_blank" 
@@ -121,12 +126,12 @@
         coinType: 118,
       },
       bech32Config: {
-        bech32PrefixAccAddr: "cosmos",
-        bech32PrefixAccPub: "cosmospub",
-        bech32PrefixValAddr: "cosmosvaloper",
-        bech32PrefixValPub: "cosmosvaloperpub",
-        bech32PrefixConsAddr: "cosmosvalcons",
-        bech32PrefixConsPub: "cosmosvalconspub",
+        bech32PrefixAccAddr: "into",
+        bech32PrefixAccPub: "intopub",
+        bech32PrefixValAddr: "intovaloper",
+        bech32PrefixValPub: "intovaloperpub",
+        bech32PrefixConsAddr: "intovalcons",
+        bech32PrefixConsPub: "intovalconspub",
       },
       currencies: [
         {
