--- a/evm/doma-testnet/index.html
+++ b/evm/doma-testnet/index.html
@@ -1,204 +1,167 @@
 <!doctype html>
-
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Doma Testnet — Add EVM Chain</title>
-  <style>
-    :root{--bg:#08121a;--card:#061421;--accent:#06b6d4;--muted:#9fb8c9;--glass:rgba(255,255,255,0.02)}
-    html,body{height:100%;margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Arial}
-    body{background:linear-gradient(180deg,#041323,#071526);display:flex;align-items:center;justify-content:center;padding:20px}
-    .frame{width:100%;max-width:1000px;background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border-radius:18px;box-shadow:0 12px 40px rgba(1,6,23,0.6);overflow:hidden;display:flex}
-    @media (max-width:900px){.frame{flex-direction:column}}
-    .main{flex:1;padding:26px}
-    .side{width:360px;padding:22px;background:rgba(255,255,255,0.02);display:flex;flex-direction:column;gap:12px}
-    @media (max-width:900px){.side{width:100%}}
-    h1{color:#fff;margin:0 0 8px;font-size:20px}
-    p.lead{color:var(--muted);margin:0 0 14px}
-    label{display:block;color:var(--muted);font-size:13px;margin-bottom:6px}
-    input,select,textarea{width:100%;padding:10px;border-radius:12px;border:1px solid rgba(255,255,255,0.03);background:var(--glass);color:#e6f7ff;outline:none}
-    .row{display:flex;gap:12px}
-    .col{flex:1}
-    .card{background:transparent;border-radius:12px;padding:12px;border:1px solid rgba(255,255,255,0.03)}
-    .btn{padding:10px 14px;border-radius:12px;border:none;cursor:pointer}
-    .btn-primary{background:linear-gradient(90deg,var(--accent),#7dd3fc);color:#04202b}
-    .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.04);color:var(--muted)}
-    pre{background:rgba(0,0,0,0.25);padding:12px;border-radius:10px;color:#e6f7ff;max-height:260px;overflow:auto}
-    .small{font-size:13px;color:var(--muted)}
-    .status{padding:10px;border-radius:10px;font-weight:600}
-    .success{background:rgba(34,197,94,0.08);color:#bbf7d0}
-    .error{background:rgba(220,38,38,0.08);color:#fecaca}
-  </style>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Tambahkan Jaringan Doma Testnet</title>
+<style>
+  body {
+    margin:0; font-family: 'Segoe UI', Arial, sans-serif;
+    background:#0f172a; color:#f8fafc;
+  }
+  .container {
+    min-height:100vh; display:flex; flex-direction:column;
+    padding:20px; box-sizing:border-box;
+  }
+  h1 { margin:0 0 10px 0; font-size:1.6rem; }
+  p.desc { font-size:0.95rem; color:#94a3b8; margin-bottom:20px; }
+  .field {
+    background:#1e293b; border-radius:10px;
+    padding:12px; margin-bottom:14px;
+  }
+  .label {
+    font-size:0.8rem; color:#94a3b8; margin-bottom:6px;
+  }
+  .value {
+    display:flex; justify-content:space-between; align-items:center;
+    gap:10px; flex-wrap:wrap;
+  }
+  .value span {
+    font-size:0.95rem; word-break:break-all;
+    flex:1;
+  }
+  .copy-btn {
+    background:#334155; border:0; color:#f1f5f9;
+    border-radius:6px; padding:6px 10px;
+    cursor:pointer; font-size:0.8rem;
+  }
+  .copy-btn:hover { background:#475569; }
+  .btn {
+    padding:14px; font-size:1rem; font-weight:600;
+    border-radius:8px; border:0; cursor:pointer;
+    margin-top:auto;
+  }
+  .primary { background:#06b6d4; color:#0f172a; }
+  .primary:hover { background:#0ea5e9; }
+  .msg { font-size:0.9rem; margin-top:14px; }
+  .error { color:#f87171; }
+  .success { color:#34d399; }
+</style>
 </head>
 <body>
-  <div class="frame">
-    <div class="main">
-      <h1>Doma Testnet — Add EVM Chain</h1>
-      <p class="lead">Form ini membantu pengguna menambahkan Doma Testnet ke wallet yang kompatibel dengan MetaMask (EVM). Silakan ubah field jika perlu sebelum mengirim request.</p><div class="card">
-    <div style="display:flex;justify-content:space-between;align-items:center">
-      <div>
-        <div class="small">Explorer</div>
-        <a id="explorerLink" href="https://explorer-testnet.doma.xyz" target="_blank" class="small">https://explorer-testnet.doma.xyz</a>
-      </div>
-      <div>
-        <button class="btn btn-ghost" id="openExplorer">Buka Explorer</button>
-      </div>
+<div class="container">
+  <h1>Tambahkan Jaringan ke Wallet</h1>
+  <p class="desc">Anda akan menambahkan jaringan <strong>Doma Testnet</strong> ke wallet Anda. Pastikan Anda mempercayai RPC ini sebelum melanjutkan.</p>
+  
+  <div class="field">
+    <div class="label">Nama Jaringan</div>
+    <div class="value">
+      <span id="valName">Doma Testnet</span>
+      <button class="copy-btn" data-copy="valName">Copy</button>
     </div>
   </div>
-
-  <form id="evmForm" style="margin-top:14px;display:grid;gap:12px">
-    <div>
-      <label>Chain Name</label>
-      <input id="chainName" value="Doma Testnet" />
+  
+  <div class="field">
+    <div class="label">Chain ID</div>
+    <div class="value">
+      <span id="valChain">974404 (0x17cc4)</span>
+      <button class="copy-btn" data-copy="valChain">Copy</button>
     </div>
-
-    <div class="row">
-      <div class="col">
-        <label>Chain ID (decimal)</label>
-        <input id="chainId" value="97476" />
-      </div>
-      <div class="col">
-        <label>Chain ID (hex)</label>
-        <input id="chainIdHex" value="0x17cc4" />
-      </div>
+  </div>
+  
+  <div class="field">
+    <div class="label">RPC URL</div>
+    <div class="value">
+      <span id="valRPC">https://rpc-testnet.doma.xyz</span>
+      <button class="copy-btn" data-copy="valRPC">Copy</button>
     </div>
-
-    <div>
-      <label>RPC URL</label>
-      <input id="rpcUrl" value="https://rpc-testnet.doma.xyz" />
+  </div>
+  
+  <div class="field">
+    <div class="label">Simbol</div>
+    <div class="value">
+      <span id="valSymbol">ETH</span>
+      <button class="copy-btn" data-copy="valSymbol">Copy</button>
     </div>
-
-    <div class="row">
-      <div class="col">
-        <label>Native Currency Name</label>
-        <input id="currencyName" value="Ether" />
-      </div>
-      <div class="col">
-        <label>Symbol</label>
-        <input id="currencySymbol" value="ETH" />
-      </div>
+  </div>
+  
+  <div class="field">
+    <div class="label">Block Explorer</div>
+    <div class="value">
+      <span id="valExplorer">https://explorer-testnet.doma.xyz</span>
+      <button class="copy-btn" data-copy="valExplorer">Copy</button>
     </div>
-
-    <div class="row">
-      <div class="col">
-        <label>Decimals</label>
-        <input id="currencyDecimals" value="18" />
-      </div>
-      <div class="col">
-        <label>Block Explorer URL</label>
-        <input id="explorerUrl" value="https://explorer-testnet.doma.xyz" />
-      </div>
-    </div>
-
-    <div>
-      <label>Icon URL (opsional)</label>
-      <input id="iconUrl" placeholder="https://.../icon.png" />
-    </div>
-
-    <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:6px">
-      <button type="button" id="addChainBtn" class="btn btn-primary">Tambahkan ke Wallet</button>
-      <button type="button" id="copyRpc" class="btn btn-ghost">Copy RPC</button>
-      <button type="button" id="copyJson" class="btn btn-ghost">Copy Add-params JSON</button>
-    </div>
-
-    <div id="statusBox" style="margin-top:10px"></div>
-
-    <div style="margin-top:8px">
-      <label class="small">Preview JSON yang akan dikirim ke wallet</label>
-      <pre id="preview" style="height:140px;">{}</pre>
-    </div>
-  </form>
+  </div>
+  
+  <button id="addBtn" class="btn primary">Tambahkan ke Wallet</button>
+  <div id="status" class="msg"></div>
 </div>
 
-<div class="side">
-  <div style="display:flex;align-items:center;gap:12px">
-    <div style="width:56px;height:56px;border-radius:12px;background:linear-gradient(180deg,#072,#043);display:flex;align-items:center;justify-content:center;border:1px solid rgba(255,255,255,0.03)">DT</div>
-    <div>
-      <div style="color:#fff;font-weight:700">Doma Testnet</div>
-      <div class="small">Chain ID: <span id="smallChainId">97476</span><br/>RPC: <span id="smallRpc">rpc-testnet.doma.xyz</span></div>
-    </div>
-  </div>
+<script>
+  const networkParams = {
+    chainId: '0x17cc4', // 974404 hex
+    chainName: 'Doma Testnet',
+    rpcUrls: ['https://rpc-testnet.doma.xyz'],
+    nativeCurrency: {
+      name: 'Ether',
+      symbol: 'ETH',
+      decimals: 18
+    },
+    blockExplorerUrls: ['https://explorer-testnet.doma.xyz']
+  };
 
-  <div style="margin-top:12px" class="card">
-    <div class="small">Instruksi singkat</div>
-    <ol style="padding-left:18px;margin:8px 0;color:var(--muted)">
-      <li>Pastikan wallet (MetaMask) terpasang dan terhubung ke situs ini.</li>
-      <li>Periksa field — ubah jika jaringan memperbarui RPC / explorer.</li>
-      <li>Klik <strong>Tambahkan ke Wallet</strong> untuk mengirim request ke wallet Anda.</li>
-      <li>Konfirmasi permintaan di ekstensi wallet jika diminta.</li>
-    </ol>
-  </div>
+  const statusEl = document.getElementById('status');
 
-  <div style="margin-top:auto;text-align:center"><a href="https://explorer-testnet.doma.xyz" target="_blank" class="small">Buka Explorer Doma Testnet</a></div>
-</div>
-
-  </div><script>
-  const $ = id => document.getElementById(id)
-
-  function buildParams(){
-    const chainName = $('chainName').value.trim() || 'Doma Testnet'
-    const chainId = parseInt($('chainId').value.trim()||'97476',10)
-    const chainIdHex = $('chainIdHex').value.trim() || '0x'+chainId.toString(16)
-    const rpc = $('rpcUrl').value.trim() || 'https://rpc-testnet.doma.xyz'
-    const currency = {
-      name: $('currencyName').value.trim() || 'Ether',
-      symbol: $('currencySymbol').value.trim() || 'ETH',
-      decimals: Number($('currencyDecimals').value) || 18
-    }
-    const explorer = $('explorerUrl').value.trim()
-    const icon = $('iconUrl').value.trim()
-
-    const params = {
-      chainId: chainIdHex,
-      chainName,
-      rpcUrls: [rpc],
-      nativeCurrency: currency
-    }
-    if (explorer) params.blockExplorerUrls = [explorer]
-    if (icon) params.iconUrls = [icon]
-    return params
+  function setStatus(msg, type) {
+    statusEl.textContent = msg;
+    statusEl.className = 'msg ' + (type || '');
   }
 
-  function updatePreview(){
-    const p = buildParams()
-    $('preview').textContent = JSON.stringify(p, null, 2)
-    $('smallChainId').textContent = $('chainId').value
-    try{ $('smallRpc').textContent = new URL($('rpcUrl').value).hostname }catch(e){}
-  }
+  document.querySelectorAll('.copy-btn').forEach(btn => {
+    btn.addEventListener('click', () => {
+      const id = btn.getAttribute('data-copy');
+      const val = document.getElementById(id).textContent;
+      navigator.clipboard.writeText(val).then(() => {
+        setStatus(`Disalin: ${val}`, 'success');
+        setTimeout(() => setStatus('', ''), 2000);
+      });
+    });
+  });
 
-  updatePreview()
-  document.querySelectorAll('input').forEach(i => i.addEventListener('input', updatePreview))
-
-  $('openExplorer').addEventListener('click', ()=>window.open($('explorerLink').href,'_blank'))
-
-  $('copyRpc').addEventListener('click', async ()=>{
-    try{ await navigator.clipboard.writeText($('rpcUrl').value); showStatus('RPC URL disalin ke clipboard','success') }catch(e){ showStatus('Gagal menyalin RPC','error') }
-  })
-
-  $('copyJson').addEventListener('click', async ()=>{
-    try{ await navigator.clipboard.writeText(JSON.stringify(buildParams())) ; showStatus('JSON add-params disalin','success') }catch(e){ showStatus('Gagal menyalin JSON','error') }
-  })
-
-  $('addChainBtn').addEventListener('click', async ()=>{
-    const params = buildParams()
-    updatePreview()
-    if (!window.ethereum){ showStatus('Wallet tidak ditemukan. Pasang MetaMask atau wallet yang kompatibel.','error'); return }
-
-    try{
-      await window.ethereum.request({ method: 'wallet_addEthereumChain', params: [params] })
-      showStatus('Berhasil mengirim request ke wallet. Konfirmasi pada ekstensi jika diminta.','success')
-    }catch(err){
-      console.error(err)
-      const msg = err && err.message ? err.message : String(err)
-      showStatus('Gagal menambahkan chain: '+msg,'error')
+  document.getElementById('addBtn').addEventListener('click', async () => {
+    if (!window.ethereum) {
+      setStatus('Wallet tidak terdeteksi.', 'error');
+      return;
     }
-  })
-
-  function showStatus(text, kind){
-    const box = $('statusBox')
-    box.innerHTML = `<div class="status ${kind==='success'?'success':'error'}">${text}</div>`
-    setTimeout(()=>{ if (box.firstChild) box.firstChild.remove() }, 8000)
-  }
-</script></body>
-          </html>
+    setStatus('Meminta wallet...', '');
+    try {
+      await window.ethereum.request({
+        method: 'wallet_switchEthereumChain',
+        params: [{ chainId: networkParams.chainId }]
+      });
+      setStatus('Berhasil berpindah ke jaringan Doma Testnet.', 'success');
+    } catch (switchError) {
+      if (switchError.code === 4902) {
+        try {
+          await window.ethereum.request({
+            method: 'wallet_addEthereumChain',
+            params: [networkParams]
+          });
+          setStatus('Jaringan berhasil ditambahkan.', 'success');
+        } catch (addError) {
+          if (addError.code === 4001) {
+            setStatus('Dibatalkan oleh pengguna.', 'error');
+          } else {
+            setStatus('Gagal menambahkan jaringan.', 'error');
+          }
+        }
+      } else if (switchError.code === 4001) {
+        setStatus('Dibatalkan oleh pengguna.', 'error');
+      } else {
+        setStatus('Gagal berpindah jaringan.', 'error');
+      }
+    }
+  });
+</script>
+</body>
+</html>
