--- a/evm/example/index.html
+++ b/evm/example/index.html
@@ -51,7 +51,7 @@
 <body>
 <div class="container">
   <h1>Tambahkan Jaringan ke Wallet</h1>
-  <p class="desc">Isi data jaringan di bawah, lalu klik tombol untuk menambahkannya ke wallet Anda.</p>
+  <p class="desc">Anda akan menambahkan jaringan [Nama Jaringan] ke wallet Anda. Pastikan Anda mempercayai RPC ini sebelum melanjutkan.</p>
   
   <div class="field">
     <div class="label">Nama Jaringan</div>
