--- a/evm/doma-testnet/index.html
+++ b/evm/doma-testnet/index.html
@@ -64,7 +64,7 @@
   <div class="field">
     <div class="label">Chain ID</div>
     <div class="value">
-      <span id="valChain">974404 (0xede44)</span>
+      <span id="valChain">97476 (0x17cc4)</span>
       <button class="copy-btn" data-copy="valChain">Copy</button>
     </div>
   </div>
@@ -99,7 +99,7 @@
 
 <script>
   const networkParams = {
-    chainId: '0xede44', // 974404 hex
+    chainId: '0x17cc4', // 97476 hex
     chainName: 'Doma Testnet',
     rpcUrls: ['https://rpc-testnet.doma.xyz'],
     nativeCurrency: {
