--- a/evm/sepolia/index.html
+++ b/evm/sepolia/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="3; url=https://example.com">
+  <meta http-equiv="refresh" content="3; url=https://revoke.cash/learn/wallets/add-network/ethereum-sepolia">
 </head>
 <body>
   <p>Redirecting you to the new site... If not, <a href="https://revoke.cash/learn/wallets/add-network/ethereum-sepolia">click here</a>.</p>
