--- a/evm/sepolia/index.html
+++ b/evm/sepolia/index.html
@@ -1,9 +1,114 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <meta http-equiv="refresh" content="3; url=https://revoke.cash/learn/wallets/add-network/ethereum-sepolia">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Tambah Sepolia</title>
+  <style>
+    html,body{
+      height:100%;
+      margin:0;
+      font-family:system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+      background:#f7fafc;
+      color:#111827;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+    }
+    .wrap{
+      height:100%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    button{
+      padding:1rem 1.6rem;
+      font-size:1.05rem;
+      border-radius:12px;
+      border:0;
+      background:#2563eb;
+      color:white;
+      cursor:pointer;
+      box-shadow:0 6px 18px rgba(37,99,235,0.18);
+    }
+    button:active{ transform:translateY(1px); }
+    .msg{
+      margin-top:12px;
+      text-align:center;
+      font-size:0.95rem;
+      color:#374151;
+    }
+  </style>
 </head>
 <body>
-  <p>Redirecting you to the new site... If not, <a href="https://revoke.cash/learn/wallets/add-network/ethereum-sepolia">click here</a>.</p>
+  <div class="wrap">
+    <div>
+      <div style="text-align:center">
+        <button id="addSepolia">Tambah / Switch ke Sepolia</button>
+      </div>
+      <div class="msg" id="msg" aria-live="polite"></div>
+    </div>
+  </div>
+
+  <script>
+    const msgEl = document.getElementById('msg');
+    const btn = document.getElementById('addSepolia');
+
+    // Sepolia chain params
+    const SEPOLIA = {
+      chainId: '0xaa36a7', // 11155111 in hex
+      chainName: 'Sepolia Testnet',
+      nativeCurrency: {
+        name: 'Sepolia Ether',
+        symbol: 'SEP',
+        decimals: 18
+      },
+      // RPC yang digunakan — jika perlu ganti dengan RPC Anda / provider publik lain
+      rpcUrls: ['https://rpc.sepolia.org'],
+      blockExplorerUrls: ['https://sepolia.etherscan.io']
+    };
+
+    function show(msg, isError = false) {
+      msgEl.textContent = msg;
+      msgEl.style.color = isError ? '#b91c1c' : '#374151';
+    }
+
+    async function addOrSwitchSepolia() {
+      if (!window.ethereum) {
+        show('Tidak ada Ethereum provider terdeteksi. Pasang MetaMask atau wallet yang kompatibel.', true);
+        return;
+      }
+
+      try {
+        // coba switch terlebih dahulu
+        await window.ethereum.request({
+          method: 'wallet_switchEthereumChain',
+          params: [{ chainId: SEPOLIA.chainId }]
+        });
+        show('Berhasil berpindah ke Sepolia ✅');
+      } catch (switchError) {
+        // 4902 = chain belum ditambahkan di wallet (wallet seperti MetaMask)
+        if (switchError && (switchError.code === 4902 || /Unrecognized chain/i.test(switchError.message))) {
+          try {
+            await window.ethereum.request({
+              method: 'wallet_addEthereumChain',
+              params: [SEPOLIA]
+            });
+            show('Sepolia berhasil ditambahkan dan di-switch ✅');
+          } catch (addError) {
+            console.error('addError', addError);
+            show('Gagal menambahkan Sepolia: ' + (addError.message || addError), true);
+          }
+        } else {
+          console.error('switchError', switchError);
+          show('Gagal switch jaringan: ' + (switchError.message || switchError), true);
+        }
+      }
+    }
+
+    btn.addEventListener('click', () => {
+      show('Meminta wallet... (akan muncul prompt MetaMask)', false);
+      addOrSwitchSepolia();
+    });
+  </script>
 </body>
 </html>
